Fixed behind bug

--- a/src/css/find-place.less
+++ b/src/css/find-place.less
@@ -5,7 +5,7 @@
   position: absolute;
   left: 10%;
   top: 5%;
-  z-index: 1;
+  z-index: 2;
   width: 60px;
   transition-property: width;
   transition-duration: 0.2s;
